--- a/environment.yml
+++ b/environment.yml
@@ -3,6 +3,7 @@ dependencies:
   - python=3.10
   - pip:
     - dash==2.3.1
+    - diskcache
     - multiprocess
     - dash_bootstrap_components
     - gunicorn==20.0.4
